[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="vboxMenu" type="VBoxContainer" parent="."]
margin_right = 51.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStatus" type="Button" parent="vboxMenu"]
margin_right = 51.0
margin_bottom = 20.0
text = "Status"

[node name="btnItems" type="Button" parent="vboxMenu"]
margin_top = 24.0
margin_right = 51.0
margin_bottom = 44.0
text = "Items"

[node name="btnExit" type="Button" parent="vboxMenu"]
margin_top = 48.0
margin_right = 51.0
margin_bottom = 68.0
text = "Exit"
